--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,19 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "label-studio>=1.22.0",
     "numpy>=2.4.2",
     "opencv-python>=4.13.0.92",
+    "pytesseract>=0.3.10",
     "ultralytics>=8.3.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=9.0.2",
+    "ruff>=0.8.0",
+]
+label = [
+    "label-studio>=1.22.0",
 ]
 
 [project.scripts]
