Refactor to unified typer CLI: eliminate scripts/ directory, add training.py, simplify codebase
- Add typer for unified CLI with 8 subcommands (scan, train-classifier, train-detector, tune, kfold, debug-crops, label, accuracy)
- Extract shared training logic into src/pinsheet_scanner/training.py (dataset, scheduler, hyperparams, train_and_evaluate, retrain_all)
- Remove scripts/ directory entirely; consolidate all CLI logic into src/pinsheet_scanner/cli.py
- Update pyproject.toml entry point to pinsheet_scanner.cli:app
- Simplify justfile to delegate to pinsheet-scanner commands
- Clean up __init__.py: remove verbose __all__ re-exports, keep essential public API
- Remove __all__ declarations from all modules (unnecessary for this project)
- Update documentation, error messages, and stale references to use new CLI commands
- All 134 tests pass, ruff lint clean

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.4.2",
     "opencv-python>=4.13.0.92",
+    "optuna>=4.7.0",
+    "scikit-learn>=1.8.0",
     "torch>=2.0.0",
+    "typer>=0.23.1",
     "ultralytics>=8.3.0",
 ]
 
@@ -21,7 +24,7 @@ dev = [
 ]
 
 [project.scripts]
-pinsheet-scanner = "pinsheet_scanner:main"
+pinsheet-scanner = "pinsheet_scanner.cli:app"
 
 [build-system]
 requires = ["uv_build>=0.9.26,<0.10.0"]
