--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,24 @@ dev = [
     "pytest>=9.0.2",
     "ruff>=0.8.0",
 ]
+ocr = [
+    "pytesseract>=0.3.10",
+]
 
 [project.scripts]
-pinsheet-scanner = "pinsheet_scanner.cli:app"
+pinsheet-scanner = "cli:app"
 
 [build-system]
-requires = ["uv_build>=0.9.26,<0.10.0"]
-build-backend = "uv_build"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+sources = {"src" = ""}
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+pythonpath = ["src"]
 markers = [
     "integration: end-to-end tests that require trained model weights",
 ]
