--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 sources = {"src" = ""}
+artifacts = ["src/labeler.html"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
