perf+fix: 15× scan speedup, code quality fixes, profiling
Performance (cProfile, 3×scan on sheet 001):
  19.34s → 1.26s (15.4× speedup, 67× fewer function calls)

  1. OCR opt-in: scan --ocr / --no-ocr (default off)
     Was 91.5% of wall time (270 tesseract subprocess spawns).
     ocr.py rewritten to batch all ROIs into one image → one
     tesseract call per sheet instead of one per diagram.

  2. Model LRU cache in pipeline.py
     _cached_detector / _cached_classifier via functools.lru_cache.
     .to() calls: 2133 → 18 (119×), load_tensor: 528 → 0 on repeat.

  3. Batch .cpu() transfer in classify.py
     avg.cpu() + conf.cpu() once per batch instead of 90 per-item
     MPS→CPU round-trips. .cpu() calls: 270 → 6 (45×).

Correctness fixes:
  - detect.py: min_yolo=10 guard — if YOLO returns < 10 boxes,
    also run classical and take the larger result
  - accuracy --manual-only revealed 2 mislabeled pseudo-crops that
    are the exact source of the sheet-002 474 vs 472 regression

Code quality:
  - collect --overwrite: refresh pseudo-labels after retraining
  - accuracy --manual-only / --prefix: honest evaluation
  - train: backup weights before overwrite (timestamped .bak.pt)
  - tune: hyperparams.json gets _tuned_at/_samples/_model_params
  - collect: uses save_labels() for consistent sorted CSV

Tooling:
  - scripts/profile_scan.py: cProfile + flameprof SVG generation
  - .gitignore: *.prof, flamegraph.svg, *.bak.pt

Tests: 54 passing

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ coverage.xml
 debug_crops/annotated_full.jpg
 debug_crops/predictions.csv
 data/classifier/
+
+# Profiling output (generated, not version-controlled)
+*.prof
+flamegraph.svg
+*.bak.pt
